--- a/react/01-github-explorer/public/index.html
+++ b/react/01-github-explorer/public/index.html
@@ -7,8 +7,6 @@
     <title>Github Explorer</title>
 </head>
 <body>
-    <div>
-        Alouuu Galera
-    </div>
+    <div id="root"></div>
 </body>
 </html>
